<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/tvName"
                    android:src="@drawable/contacts_icon" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/tvName"
                    android:textSize="17sp" 
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:hint="@string/etName"
                    android:textSize="17sp" 
                    android:textColor="#000066"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivGender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/tvGender"
                    android:src="@drawable/gender" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/tvGender"
                    android:textSize="17sp" 
                    android:textColor="#000000"/>

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/radioButtonMale"
                        android:textSize="17sp" 
                        android:textColor="#000066"/>/>

                    <RadioButton
                        android:id="@+id/radioButtonfemale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/radioButtonfemale"
                        android:textSize="17sp" 
                        android:textColor="#000066"/>/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/tvHeight"
                    android:src="@drawable/length_icon" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/tvHeight"
                    android:textSize="17sp" 
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/etHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:paddingLeft="10dp"
                    android:hint="@string/etHeight"
                    android:textSize="17sp"
                    android:textColor="#000066"
                    android:inputType="number"/> />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/weight_icon" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/tvWeight"
                    android:textSize="17sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:paddingLeft="10dp"
                    android:hint="@string/etWeight"
                    android:textSize="17sp"
                    android:textColor="#000066"
                    android:inputType="numberDecimal"/> />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivDateOfBirth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/birthday" />

                <TextView
                    android:id="@+id/tvDateOfBirth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/tvDateOfBirth"
                    android:textSize="17sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/etDateOfBirth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:paddingLeft="10dp"
                    android:hint="@string/etDateOfBirth"
                    android:textSize="17sp" 
                    android:textColor="#000066"
                    android:inputType="date"/>
            </LinearLayout>
            
            <View android:layout_width="match_parent"
                android:layout_height="50dp"/>
            
            <Button android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSave"/>
            
            <View android:layout_width="match_parent"
                android:layout_height="50dp"/>
            
            <View android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>