<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="15dp" >

        <LinearLayout
            android:id="@+id/layoutOne"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/viewEvent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="start"
                android:textColor="#000000"
                android:layout_marginRight="10dp"
                android:text="@string/food" />

            <TextView
                android:id="@+id/viewTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:layout_marginRight="10dp"
                android:text="@string/time" />

            <ImageView
                android:id="@+id/imageAlarm"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/image"
                android:src="@drawable/alarm_on" />
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/tvManu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textColor="#000000"
                android:text="@string/manu" />
            
            <TextView
                android:id="@+id/viewManu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="#000000"
                android:text="@string/manu" />
        </LinearLayout>

            
    </LinearLayout>