<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivTakePhoto"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:src="@drawable/camera_blue" 
                    android:onClick="takePrescriptionPhoto"/>

                <TextView
                    android:id="@+id/btnTakePhoto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="Take a photo of prescription"
                    android:textColor="#000066"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>

            <ImageView
                android:id="@+id/ivPrescription"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/prescription_icon"
                android:contentDescription="@string/tvDoctorName" />

            <EditText
                android:id="@+id/etDoctorName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/etDoctorName"
                android:paddingLeft="20dp"
                android:textColor="#000066"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etAppointmentReason"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/etAppointmentReason"
                android:paddingLeft="20dp"
                android:textColor="#000066"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etAppointmentDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/etAppointmentdate"
                android:paddingLeft="20dp"
                android:textColor="#000066"
                android:textSize="15sp"
                android:inputType="date" />

            <EditText
                android:id="@+id/etChamberAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/etChamberAddress"
                android:paddingLeft="20dp"
                android:textColor="#000066"
                android:textSize="15sp" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>